Fix z-index on status-report time-slider

--- a/src/app/trend-map/trend-map.component.scss
+++ b/src/app/trend-map/trend-map.component.scss
@@ -267,6 +267,7 @@
     }
 
     .status-report-floating-title {
+      z-index: 1050;
       position: fixed;
       top: $header-height;
       left: 0;
